<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#23E8E0E0"
    android:backgroundTint="@color/background"
    android:onClick="buttonClick"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="500dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edtNumber1"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edit_number1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_Number1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/label_Number2"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber1" />

    <EditText
        android:id="@+id/edtNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/edit_number2"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSub"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:backgroundTint="@color/btn_Minus"
        android:onClick="buttonClick"
        android:text="@string/btb_Minus"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnAdd"
        app:layout_constraintTop_toTopOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="76dp"
        android:onClick="buttonClick"
        android:text="@string/btn_plus"
        android:textSize="34sp"
        app:backgroundTint="@color/btn_plus"
        app:layout_constraintEnd_toStartOf="@+id/btnSub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNumber2" />

    <Button
        android:id="@+id/btnDivid"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="36dp"
        android:text="@string/btn_Divide"
        android:textSize="34sp"
        app:backgroundTint="@color/btn_Divide"
        app:layout_constraintEnd_toStartOf="@+id/btnMultiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />

    <Button
        android:id="@+id/btnMultiply"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="36dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Multiply"
        android:textSize="34sp"
        app:backgroundTint="@color/btn_Multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnDivid"
        app:layout_constraintTop_toBottomOf="@+id/btnSub" />

    <TextView
        android:id="@+id/label_Number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:text="@string/label_Number1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>